# r4r

./: .gitignore  INSTALL_METHODS.md  LICENSE  LOG_MANAGEMENT.md  Makefile  README.md  TUI_FEATURES.md  build.sh  demo_tui.py  install-pip.sh  install-url.py  install.sh  pyproject.toml  run_tests.py
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/r4r/: __init__.py  __main__.py  api.py  cli.py  commands.py  config.py  display.py  log_manager.py  tui.py  viewer.py
tests/: README.md  __init__.py  test_api.py  test_commands.py  test_config.py  test_display.py  test_integration.py
