[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r4r"
version = "0.1.0"
description = "Super easy Render CLI with advanced features - deployments, jobs, logs, and more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "r4r", email = "hello@r4r.dev" }]
keywords = ["render", "cli", "deployment", "devops", "jobs", "logs", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "textual>=0.44.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/porameht/r4r"
Repository = "https://github.com/porameht/r4r.git"
Issues = "https://github.com/porameht/r4r/issues"

[project.scripts]
r4r = "r4r.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/r4r"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]
