[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "r4r"
version = "0.2.0"
description = "Super easy Render CLI with advanced features - deployments, jobs, logs, and more"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "r4r", email = "hello@r4r.dev" }]
keywords = ["render", "cli", "deployment", "devops", "jobs", "logs", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "mypy>=1.14.1",
    "types-requests>=2.32.0.20241016",
    "types-pyyaml>=6.0.12.20241230",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/porameht/r4r"
Repository = "https://github.com/porameht/r4r.git"
Issues = "https://github.com/porameht/r4r/issues"

[project.scripts]
r4r = "r4r.cli:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/r4r"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "twine>=6.1.0",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20241016",
]


